--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: ruby
+language: minimal
 
 services:
   - docker
@@ -21,12 +21,12 @@ before_install:
 before_script:
   - cp -f .env.sample .env
   - echo RAILS_MASTER_KEY=${DOCKER_COMPOSE_VERSION} > .env
-  - docker-compose up -d --build
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
 script:
+  - docker-compose up --build
   - docker-compose run --rm app bundle exec rails db:create
   - docker-compose run --rm app bundle exec rails test
 
