--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
   db:
     image: postgres:11.5-alpine
     env_file: .env
-    volumes:
-      - ./docker/db:/docker-entrypoint-initdb.d:delegated
+    # volumes:
+    #  - ./docker/db:/docker-entrypoint-initdb.d:delegated
     ports:
       - 5432:5432
     networks:
