--- a/.travis.yml
+++ b/.travis.yml
@@ -25,15 +25,16 @@ before_install:
 
 before_script:
   - echo LANG=en_US.UTF-8 > .env
-  - echo LANGUAGE=en_US:en > .env
-  - echo LC_ALL=en_US.UTF-8 > .env
-  - echo POSTGRES_USER=squeeze > .env
-  - echo POSTGRES_DB=squeeze_test > .env
-  - echo RAILS_ENV=test > .env
-  - echo RAILS_MASTER_KEY=${RAILS_MASTER_KEY} > .env
+  - echo LANGUAGE=en_US:en >> .env
+  - echo LC_ALL=en_US.UTF-8 >> .env
+  - echo POSTGRES_USER=squeeze >> .env
+  - echo POSTGRES_DB=squeeze_test >> .env
+  - echo RAILS_ENV=test >> .env
+  - echo RAILS_MASTER_KEY=${RAILS_MASTER_KEY} >> .env
   - docker-compose build
 
 script:
+  -
   - docker-compose run --rm app bundle exec rails test
 
 after_script:
