👷 Code Climate debug flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - sudo mv cc-test-reporter /usr/local/bin
-  - cc-test-reporter before-build
+  - cc-test-reporter before-build --debug
 
 before_script:
   - echo LANG=en_US.UTF-8 > .env
@@ -39,4 +39,4 @@ script:
 
 after_script:
   - docker-compose down -v
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build --debug --exit-code $TRAVIS_TEST_RESULT
