--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - sudo mv cc-test-reporter /usr/local/bin
-  - cc-test-reporter before-build --debug
+  - cc-test-reporter before-build
 
 before_script:
   - echo LANG=en_US.UTF-8 > .env
@@ -34,9 +34,9 @@ before_script:
   - docker-compose build
 
 script:
-  -
+  - docker-compose run --rm app bundle exec rails db:test:prepare
   - docker-compose run --rm app bundle exec rails test
 
 after_script:
   - docker-compose down -v
-  - ./cc-test-reporter after-build --debug --exit-code $TRAVIS_TEST_RESULT
+  - cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
