👷 Replace paths in-place

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,5 +39,5 @@ script:
 
 after_script:
   - docker-compose down -v
-  - sed -i .bak 's/\/opt\/project\/app\///' coverage/.resultset.json
+  - sed -i 's|/opt/project/app/||g' coverage/.resultset.json
   - cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
