👷‍ Continuous integration support (#2)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - db
       - cache
       - web
-    entrypoint: /opt/project/app/docker/entrypoint.sh
-    command: /opt/project/app/docker/command.sh
+    entrypoint: /opt/project/docker/entrypoint.sh
+    command: /opt/project/docker/command.sh
     networks:
       squeeze-dev:
         aliases:
@@ -22,8 +22,8 @@ services:
   db:
     image: postgres:11.5-alpine
     env_file: .env
-    volumes:
-      - ./docker/db:/docker-entrypoint-initdb.d:delegated
+    # volumes:
+    #  - ./docker/db:/docker-entrypoint-initdb.d:delegated
     ports:
       - 5432:5432
     networks:
