--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@ POSTGRES_USER=squeeze
 POSTGRES_DB=squeeze_development
 RAILS_ENV=development
 RAILS_MASTER_KEY=
+DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_development?pool=5
+REDIS_URL=redis://cache.dev:6379/0
