--- a/.env.sample
+++ b/.env.sample
@@ -6,4 +6,5 @@ POSTGRES_DB=squeeze_development
 RAILS_ENV=development
 RAILS_MASTER_KEY=
 DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_development?pool=5
+TEST_DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_test?pool=5
 REDIS_URL=redis://cache.dev:6379/0
