--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,8 @@ Metrics/BlockLength:
   Max: 40
 Metrics/LineLength:
   Max: 120
+Metrics/MethodLength:
+  Max: 40
 Style/Copyright:
   Enabled: false
 Style/MissingElse:
