--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,17 @@
+DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_development?pool=5
 LANG=en_US.UTF-8
 LANGUAGE=en_US:en
 LC_ALL=en_US.UTF-8
-POSTGRES_USER=squeeze
+MAILER_FROM=no-reply@squeeze.app
 POSTGRES_DB=squeeze_development
+POSTGRES_USER=squeeze
 RAILS_ENV=development
 RAILS_MASTER_KEY=
-DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_development?pool=5
-TEST_DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_test?pool=5
 REDIS_URL=redis://cache.dev:6379/0
+SMTP_ADDRESS=smtp.mailtrap.io
+SMTP_AUTHENTICATION=cram_md5
+SMTP_DOMAIN=smtp.mailtrap.io
+SMTP_PASSWORD=
+SMTP_PORT=2525
+SMTP_USER_NAME=
+TEST_DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_test?pool=5
