💚 Set mailer variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,14 +24,15 @@ before_install:
   - cc-test-reporter before-build
 
 before_script:
-  - echo LANG=en_US.UTF-8 > .env
+  - echo DATABASE_URL=${DATABASE_URL} > .env
+  - echo LANG=en_US.UTF-8 >> .env
   - echo LANGUAGE=en_US:en >> .env
   - echo LC_ALL=en_US.UTF-8 >> .env
-  - echo POSTGRES_USER=squeeze >> .env
+  - echo MAILER_FROM=${MAILER_FROM} >> .env
   - echo POSTGRES_DB=squeeze_test >> .env
+  - echo POSTGRES_USER=squeeze >> .env
   - echo RAILS_ENV=test >> .env
   - echo RAILS_MASTER_KEY=${RAILS_MASTER_KEY} >> .env
-  - echo DATABASE_URL=${DATABASE_URL} >> .env
   - echo REDIS_URL=${REDIS_URL} >> .env
   - docker-compose build
 
