--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,4 @@ SMTP_PASSWORD=
 SMTP_PORT=2525
 SMTP_USER_NAME=
 TEST_DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_test?pool=5
+TEST_REDIS_URL=redis://cache.dev:6379/1
