--- a/public/squeeze-api.v1.yaml
+++ b/public/squeeze-api.v1.yaml
@@ -1181,6 +1181,261 @@ paths:
         - Authentication token: []
       tags:
         - Incomes
+  '/v1/budgets/{budget_id}/expenses':
+    parameters:
+      - name: budget_id
+        in: path
+        schema:
+          type: integer
+        required: true
+    get:
+      summary: User budget expenses search
+      tags:
+        - Expenses
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Expense'
+                  meta:
+                    $ref: '#/components/schemas/Metadata'
+                required:
+                  - data
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+      operationId: get-v1-budget-expenses
+      parameters:
+        - schema:
+            type: number
+          in: query
+          name: page
+        - schema:
+            type: number
+          in: query
+          name: per_page
+      security:
+        - Authentication token: []
+    post:
+      summary: User budget expense create
+      operationId: post-v1-budget-expenses
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/Expense'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+               $ref: '#/components/schemas/GeneralError'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableError'
+      security:
+        - Authentication token: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                data:
+                  $ref: '#/components/schemas/StoreExpense'
+      tags:
+        - Expenses
+  '/v1/budgets/{budget_id}/expenses/{id}':
+    parameters:
+      - name: budget_id
+        in: path
+        schema:
+          type: integer
+        required: true
+      - name: id
+        in: path
+        schema:
+          type: integer
+        required: true
+    get:
+      summary: User budget expense find
+      tags:
+        - Expenses
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/Expense'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+      operationId: get-v1-budget-expenses-member
+      security:
+        - Authentication token: []
+    put:
+      summary: User budget expense update
+      operationId: put-v1-budget-expenses-member
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/Expense'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableError'
+      security:
+        - Authentication token: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                data:
+                  $ref: '#/components/schemas/StoreExpense'
+      tags:
+        - Expenses
+    patch:
+      summary: User budget expense update
+      operationId: patch-v1-budget-expenses-member
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/Expense'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableError'
+      security:
+        - Authentication token: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                data:
+                  $ref: '#/components/schemas/StoreExpense'
+      tags:
+        - Expenses
+    delete:
+      summary: User budget expense delete
+      operationId: delete-v1-budget-expenses-member
+      responses:
+        '204':
+          description: No Content
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+      security:
+        - Authentication token: []
+      tags:
+        - Expenses
 components:
   securitySchemes:
     Authentication token:
@@ -1436,6 +1691,51 @@ components:
         - account_id
         - description
         - amount
+    Expense:
+      type: object
+      properties:
+        id:
+          type: number
+        uuid:
+          type: string
+          format: uuid
+        description:
+          type: string
+        amount:
+          type: number
+        created_at:
+          type: string
+        updated_at:
+          type: string
+        category:
+          $ref: '#/components/schemas/Category'
+        account:
+          $ref: '#/components/schemas/Account'
+      required:
+        - id
+        - uuid
+        - description
+        - amount
+        - created_at
+        - updated_at
+        - category
+        - account
+    StoreExpense:
+      type: object
+      properties:
+        category_id:
+          type: number
+        account_id:
+          type: number
+        description:
+          type: string
+        amount:
+          type: number
+      required:
+        - category_id
+        - account_id
+        - description
+        - amount
     AuthenticationToken:
       type: object
       properties:
@@ -1508,3 +1808,5 @@ tags:
     description: User budget categories management
   - name: Incomes
     description: User budget incomes management
+  - name: Expenses
+    description: User budget expenses management
