--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -2,10 +2,10 @@ resolver 127.0.0.11;
 
 server {
     listen 80;
-    server_name squeeze.*;
+    server_name api.*;
     location / {
-        set $app_stream http://app.dev;
-        proxy_pass $app_stream;
+        set $api_stream http://api.dev;
+        proxy_pass $api_stream;
         proxy_redirect off;
         proxy_http_version 1.1;
         proxy_connect_timeout 600;
