--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.5'
 services:
-  app:
+  api:
+    image: hugogilmar/squeeze-api
     build:
       context: .
     env_file: .env
@@ -18,18 +19,22 @@ services:
     networks:
       squeeze-dev:
         aliases:
-          - app.dev
+          - api.dev
+    deploy:
+      replicas: 1
   db:
     image: postgres:11.5-alpine
     env_file: .env
-    # volumes:
-    #  - ./docker/db:/docker-entrypoint-initdb.d:delegated
+    volumes:
+     - ./docker/db:/docker-entrypoint-initdb.d:delegated
     ports:
       - 5432:5432
     networks:
       squeeze-dev:
         aliases:
           - db.dev
+    deploy:
+      replicas: 1
   cache:
     image: redis:5.0-alpine
     env_file: .env
@@ -39,14 +44,20 @@ services:
       squeeze-dev:
         aliases:
           - cache.dev
+    deploy:
+      replicas: 1
   web:
+    image: nginx:1.17-alpine
     ports:
       - 80:80
-    image: nginx:1.17-alpine
     volumes:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
-      squeeze-dev: null
+      squeeze-dev:
+        aliases:
+          - web.dev
+    deploy:
+      replicas: 1
 volumes:
   bundle:
     driver: local
