🔧 Compress JSON content-type

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,22 +1,37 @@
 resolver 127.0.0.11;
 
 server {
-    listen 80;
-    server_name api.*;
-    location / {
-        set $api_stream http://api.dev;
-        proxy_pass $api_stream;
-        proxy_redirect off;
-        proxy_http_version 1.1;
-        proxy_connect_timeout 600;
-        proxy_send_timeout 600;
-        proxy_read_timeout 600;
-        send_timeout 600;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header X-NginX-Proxy true;
-    }
+  client_body_buffer_size 10K;
+  client_body_timeout 12;
+  client_header_buffer_size 1k;
+  client_header_timeout 12;
+  client_max_body_size 8m;
+  gzip on;
+  gzip_comp_level 2;
+  gzip_min_length 1000;
+  gzip_proxied expired no-cache no-store private auth;
+  gzip_types application/json;
+  keepalive_timeout 15;
+  large_client_header_buffers 2 1k;
+  listen 80;
+  send_timeout 10;
+  server_name api.*;
+  server_tokens off;
+
+  location / {
+    proxy_connect_timeout 600;
+    proxy_http_version 1.1;
+    proxy_pass $api_stream;
+    proxy_read_timeout 600;
+    proxy_redirect off;
+    proxy_send_timeout 600;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $http_host;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_set_header X-Real-IP $remote_addr;
+    send_timeout 600;
+    set $api_stream http://api.dev;
+  }
 }
