🔧 Set composer project name env var

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
+COMPOSE_PROJECT_NAME=squeeze-api
 DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_development?pool=5
 LANG=en_US.UTF-8
 LANGUAGE=en_US:en
