--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,18 @@
-COMPOSE_PROJECT_NAME=squeeze-api
-DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_development?pool=5
+COMPOSE_PROJECT_NAME=squeeze
+DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_development
 LANG=en_US.UTF-8
 LANGUAGE=en_US:en
 LC_ALL=en_US.UTF-8
 MAILER_FROM=no-reply@squeeze.app
 POSTGRES_DB=squeeze_development
 POSTGRES_USER=squeeze
+PUMA_PIDFILE=tmp/pids/server.pid
+PUMA_PORT=3000
+PUMA_WEB_CONCURRENCY=2
 RAILS_ENV=development
 RAILS_MASTER_KEY=
+RAILS_MAX_THREADS=5
+RAILS_MIN_THREADS=5
 REDIS_URL=redis://cache.dev:6379/0
 SMTP_ADDRESS=smtp.mailtrap.io
 SMTP_AUTHENTICATION=cram_md5
@@ -15,5 +20,5 @@ SMTP_DOMAIN=smtp.mailtrap.io
 SMTP_PASSWORD=
 SMTP_PORT=2525
 SMTP_USER_NAME=
-TEST_DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_test?pool=5
+TEST_DATABASE_URL=postgresql://squeeze@db.dev:5432/squeeze_test
 TEST_REDIS_URL=redis://cache.dev:6379/1
